--- a/CodeDemos/DemoUtils/pom.xml
+++ b/CodeDemos/DemoUtils/pom.xml
@@ -7,4 +7,24 @@
   </parent>
   <groupId>demo.utils</groupId>
   <artifactId>DemoUtils</artifactId>
+  <dependencies>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  	</dependency>
+  </dependencies>
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<version>2.0.2</version>
+  			<configuration>
+  				<source>7</source>
+  				<target>7</target>
+  			</configuration>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
