--- a/CodeDemos/pom.xml
+++ b/CodeDemos/pom.xml
@@ -5,6 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
+  	<module>DemoUtils</module>
   	<module>SpringDemo</module>
   </modules>
 </project>
