--- a/CodeDemos/SpringDemo/pom.xml
+++ b/CodeDemos/SpringDemo/pom.xml
@@ -13,6 +13,11 @@
   		<artifactId>spring-context</artifactId>
   		<version>4.2.4.RELEASE</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  	</dependency>
   </dependencies>
   <build>
   	<plugins>
