--- a/CodeDemos/SpringDemo/pom.xml
+++ b/CodeDemos/SpringDemo/pom.xml
@@ -18,6 +18,31 @@
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.aspectj</groupId>
+  		<artifactId>aspectjrt</artifactId>
+  		<version>1.8.8</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.aspectj</groupId>
+  		<artifactId>aspectjweaver</artifactId>
+  		<version>1.8.8</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>aopalliance</groupId>
+  		<artifactId>aopalliance</artifactId>
+  		<version>1.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>cglib</groupId>
+  		<artifactId>cglib</artifactId>
+  		<version>3.2.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>asm</groupId>
+  		<artifactId>asm-commons</artifactId>
+  		<version>3.3.1</version>
+  	</dependency>
   </dependencies>
   <build>
   	<plugins>
