--- a/CodeDemos/DemoUtils/pom.xml
+++ b/CodeDemos/DemoUtils/pom.xml
@@ -13,6 +13,11 @@
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
   	</dependency>
+	  <dependency>
+		  <groupId>org.freemarker</groupId>
+		  <artifactId>freemarker</artifactId>
+		  <version>2.3.23</version>
+	  </dependency>
   </dependencies>
   <build>
   	<plugins>
