--- a/CodeDemos/DemoUtils/pom.xml
+++ b/CodeDemos/DemoUtils/pom.xml
@@ -18,6 +18,51 @@
 		  <artifactId>freemarker</artifactId>
 		  <version>2.3.23</version>
 	  </dependency>
+	  <dependency>
+		  <groupId>com.sun.mail</groupId>
+		  <artifactId>javax.mail</artifactId>
+		  <version>1.5.5</version>
+	  </dependency>
+	  <!--<dependency>
+		  <groupId>javax.mail</groupId>
+		  <artifactId>javax.mail-api</artifactId>
+		  <version>1.5.5</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.sun.mail</groupId>
+		  <artifactId>mailapi</artifactId>
+		  <version>1.5.5</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.sun.mail</groupId>
+		  <artifactId>smtp</artifactId>
+		  <version>1.5.5</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.sun.mail</groupId>
+		  <artifactId>imap</artifactId>
+		  <version>1.5.5</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.sun.mail</groupId>
+		  <artifactId>pop3</artifactId>
+		  <version>1.5.5</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.sun.mail</groupId>
+		  <artifactId>gimap</artifactId>
+		  <version>1.5.5</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.sun.mail</groupId>
+		  <artifactId>dsn</artifactId>
+		  <version>1.5.5</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.sun.mail</groupId>
+		  <artifactId>logging-mailhandler</artifactId>
+		  <version>1.5.5</version>
+	  </dependency>-->
   </dependencies>
   <build>
   	<plugins>
