Added MavenDemo module

--- a/CodeDemos/pom.xml
+++ b/CodeDemos/pom.xml
@@ -7,5 +7,6 @@
   <modules>
   	<module>DemoUtils</module>
   	<module>SpringDemo</module>
+      <module>MavenDemo</module>
   </modules>
 </project>
