--- a/CodeDemos/DemoUtils/pom.xml
+++ b/CodeDemos/DemoUtils/pom.xml
@@ -23,6 +23,11 @@
 		  <artifactId>javax.mail</artifactId>
 		  <version>1.5.5</version>
 	  </dependency>
+	  <dependency>
+		  <groupId>joda-time</groupId>
+		  <artifactId>joda-time</artifactId>
+		  <version>2.9.1</version>
+	  </dependency>
 	  <!--<dependency>
 		  <groupId>javax.mail</groupId>
 		  <artifactId>javax.mail-api</artifactId>
@@ -71,8 +76,8 @@
   			<artifactId>maven-compiler-plugin</artifactId>
   			<version>2.0.2</version>
   			<configuration>
-  				<source>7</source>
-  				<target>7</target>
+  				<source>1.8</source>
+  				<target>1.8</target>
   			</configuration>
   		</plugin>
   	</plugins>
