--- a/CodeDemos/SpringDemo/pom.xml
+++ b/CodeDemos/SpringDemo/pom.xml
@@ -7,6 +7,10 @@
   </parent>
   <groupId>code.spring</groupId>
   <artifactId>SpringDemo</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
   <dependencies>
   	<dependency>
   		<groupId>org.springframework</groupId>
@@ -43,13 +47,33 @@
   		<artifactId>asm-commons</artifactId>
   		<version>3.3.1</version>
   	</dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>4.2.4.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>4.2.4.RELEASE</version>
+    </dependency>
+	<dependency>
+	  <groupId>org.junit.contrib</groupId>
+	  <artifactId>junit-theories</artifactId>
+	  <version>4.12</version>
+	</dependency>
+	<dependency>
+	  <groupId>com.github.stefanbirkner</groupId>
+	  <artifactId>system-rules</artifactId>
+	  <version>1.2.0</version>
+	</dependency>
   </dependencies>
   <build>
   	<plugins>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-compiler-plugin</artifactId>
-  			<version>2.0.2</version>
+  			<version>3.5</version>
   			<configuration>
   				<source>1.8</source>
   				<target>1.8</target>
