--- a/CodeDemos/SpringDemo/pom.xml
+++ b/CodeDemos/SpringDemo/pom.xml
@@ -9,28 +9,32 @@
   <artifactId>SpringDemo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 	<properties>
+		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>4.2.4.RELEASE</spring.version>
+		<junit.version>4.12</junit.version>
+		<aspect.version>1.8.8</aspect.version>
 	</properties>
   <dependencies>
   	<dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-context</artifactId>
-  		<version>4.2.4.RELEASE</version>
+  		<version>${spring.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
-  		<version>4.12</version>
+  		<version>${junit.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>org.aspectj</groupId>
   		<artifactId>aspectjrt</artifactId>
-  		<version>1.8.8</version>
+  		<version>${aspect.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>org.aspectj</groupId>
   		<artifactId>aspectjweaver</artifactId>
-  		<version>1.8.8</version>
+  		<version>${aspect.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>aopalliance</groupId>
@@ -50,17 +54,17 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>4.2.4.RELEASE</version>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>4.2.4.RELEASE</version>
+      <version>${spring.version}</version>
     </dependency>
 	<dependency>
 	  <groupId>org.junit.contrib</groupId>
 	  <artifactId>junit-theories</artifactId>
-	  <version>4.12</version>
+	  <version>${junit.version}</version>
 	</dependency>
 	<dependency>
 	  <groupId>com.github.stefanbirkner</groupId>
@@ -75,8 +79,8 @@
   			<artifactId>maven-compiler-plugin</artifactId>
   			<version>3.5</version>
   			<configuration>
-  				<source>1.8</source>
-  				<target>1.8</target>
+  				<source>${java.version}</source>
+  				<target>${java.version}</target>
   			</configuration>
   		</plugin>
   	</plugins>
