Added custom plugin in maven and Modified UT for SpringDemo

--- a/CodeDemos/MavenDemo/pom.xml
+++ b/CodeDemos/MavenDemo/pom.xml
@@ -13,5 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>RPNCalculator</module>
+        <module>SamplePlugin</module>
+        <module>SamplePluginClient</module>
     </modules>
 </project>
