Moved maven-compiler-plugin at parent level

--- a/CodeDemos/pom.xml
+++ b/CodeDemos/pom.xml
@@ -17,4 +17,17 @@
         <junit.version>4.12</junit.version>
         <aspect.version>1.8.8</aspect.version>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
