--- a/CodeDemos/DemoUtils/pom.xml
+++ b/CodeDemos/DemoUtils/pom.xml
@@ -23,5 +23,10 @@
 		  <artifactId>joda-time</artifactId>
 		  <version>2.9.1</version>
 	  </dependency>
+	  <dependency>
+		  <groupId>org.apache.commons</groupId>
+		  <artifactId>commons-email</artifactId>
+		  <version>1.4</version>
+	  </dependency>
   </dependencies>
 </project>
