--- a/CodeDemos/SpringDemo/pom.xml
+++ b/CodeDemos/SpringDemo/pom.xml
@@ -52,7 +52,7 @@
 	<dependency>
 	  <groupId>org.junit.contrib</groupId>
 	  <artifactId>junit-theories</artifactId>
-	  <version>${junit.version}</version>
+	  <version>4.12</version>
 	</dependency>
 	<dependency>
 	  <groupId>com.github.stefanbirkner</groupId>
